overlays/uksouth-dev/olympus/zephyrus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: api.${cluster_name}.${cluster_location}.bink.sh-zephyrus
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /auth_transactions
            pathType: Prefix
            backend:
              service:
                name: zephyrus-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
